tests/frontend/fail/array/mapping_array_assignment.act
contract B

constructor()

creates

  mapping(uint => uint) m := [-1,-2]
